[workspace]
members = ["hestia-engine", "hestia-gui", "hestia-tui"]
exclude = ["hestia-driver"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["mathyslv"]
description = "Hestia - A prototype EDR written in Rust for cybersecurity research"
license = "MIT"
repository = "https://github.com/mathyslv/hestia"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
serde_json = "1.0"
thiserror = "1.0"

[workspace.dependencies.serde]
version = "1.0"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1.0"
features = ["full"]
