[package]
name = "hestia-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Detection engine for Hestia EDR - analyzes events and detects threats"

[dependencies]
anyhow.workspace = true
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-etw = "0.2"

[target.'cfg(windows)'.dependencies]
windows-service = "0.6"

[[bin]]
name = "agent"
path = "src/main.rs"
